--- a/starbucks-main/K8S/deployment.yml
+++ b/starbucks-main/K8S/deployment.yml
@@ -6,7 +6,7 @@ spec:
   replicas: 1  # Number of desired replicas
   selector:
     matchLabels:
-      app: start
+      app: startbucks
   template:
     metadata:
       labels:
