--- a/starbucks-main/K8S/deployment.yml
+++ b/starbucks-main/K8S/deployment.yml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: sartbucks
+        app: startbucks
     spec:
       containers:
       - name: hotstar
